# secDetector

./: .gitignore  CMakeLists.txt  README.en.md  README.md
docs/en/2403_LTS_SP2/: api_reference.md  introduction_to_secdetector.md
docs/en/2403_lts_sp2/: using_secdetector.md
docs/en/2509/: _toc.yaml  install_secdetector.md  secdetector.md
docs/zh/2403_LTS_SP2/: _toc.yaml  api_reference.md  install_secdetector.md  introduction_to_secdetector.md  using_secdetector.md
docs/zh/2403_lts_sp2/: introduction_to_secdetector.md  using_secdetector.md
docs/zh/2509/: secdetector.md
docs/zh/master/: api_reference.md  introduction_to_secdetector.md  using_secdetector.md
examples/python/: client.py
grpc/: Makefile  comm_client.cc  comm_server.cc
grpc/protos/: comm_api.proto
include/: secDetector_topic.h
kerneldriver/cases/: Makefile
kerneldriver/cases/file_block/: secDetector_file_block.c
kerneldriver/cases/kmodule_baseline/: secDetector_kmodule_baseline.c  secDetector_mc_kmodule_baseline.c  secDetector_mc_kmodule_baseline.h
kerneldriver/cases/kprobe_example/: secDetector_kprobe_example.c
kerneldriver/cases/lsm_example/: secDetector_lsm_example.c
kerneldriver/cases/memory_corruption/: secDetector_mc_kmodule_list.c  secDetector_mc_kmodule_list.h  secDetector_memory_corruption.c
kerneldriver/cases/program_action/: secDetector_program_action.c
kerneldriver/cases/task_block/: secDetector_task_block.c
kerneldriver/core/: Makefile  secDetector_main.c  secDetector_manager.c  secDetector_workflow.c
kerneldriver/core/analyze_unit/: secDetector_analyze.c  secDetector_save_check.c  secDetector_save_check.h
kerneldriver/core/collect_unit/: secDetector_collect.c  secDetector_function_switch.c  secDetector_function_switch.h  secDetector_time.c  secDetector_time.h
kerneldriver/core/hook_unit/: secDetector_hook.c  secDetector_hook.h  secDetector_hook_kprobe.c  secDetector_hook_lsm.c  secDetector_hook_tracepoint.c
kerneldriver/core/response_unit/: secDetector_proc.c  secDetector_proc.h  secDetector_response.c  secDetector_ringbuffer.c  secDetector_ringbuffer.h
kerneldriver/include/: secDetector_analyze.h  secDetector_analyze_type.h  secDetector_collect.h  secDetector_collect_type.h  secDetector_hook_type.h  secDetector_manager.h  secDetector_module_type.h  secDetector_response.h  secDetector_response_type.h  secDetector_ringbuffer.h  secDetector_workflow.h  secDetector_workflow_type.h
lib/: CMakeLists.txt  secDetector_sdk.cpp  secDetector_sdk.h
observer_agent/: CMakeLists.txt
observer_agent/ebpf/: CMakeLists.txt  ebpf_types.h  fentry.bpf.c  fentry.c  fentry.h  test_fentry.c
observer_agent/ebpf/file_ebpf/: CMakeLists.txt  file_fentry.bpf.c  file_fentry.c  test_file_fentry.c
observer_agent/grpc_comm/: Makefile  client.cpp  client_pub_demo.cpp  client_sub_demo.cpp  comm_client.cpp  comm_server.cpp  grpc_api.h  server.cpp  server_demo.cpp
observer_agent/grpc_comm/protos/: comm_api.proto
observer_agent/service/: ebpf_converter.cpp  ebpf_converter.h  main.cpp  ringbuffer.cpp  ringbuffer.h
observer_agent/usrdriver/resourcesusage/: CMakeLists.txt  cpuinfo.cpp  diskinfo.cpp  fileinfo.cpp  json11.cc  main.cc  meminfo.cpp  pidinfo.cpp  resources_collect.h  server.cc  server.hh  sshinfo.cpp  tcpstatcount.cc
test/test_hidden_kmodule/: Makefile  hide_kmodule.c  hide_kmodule.h  hide_utils.c  hide_utils.h  test_hidden_kmodule.c
